[package]
name = "sfo-sql"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/wugren/sfo-sql.git"
description = "private sql library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std ={ version = "1.12", features = ["std"] }
log = "0.4"
sqlx = { version = "0.5", features = ["runtime-async-std-rustls", "macros", "all-types" ] }
async-trait = "0.1.60"

[features]
default = ["mysql"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

[build-dependencies]
syn = {version = "1.0", features = ["full"]}
