[package]
name = "sfo-sql"
version = "0.3.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/wugren/sfo-sql.git"
description = "private sql library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sqlx = { version = "0.8", features = ["runtime-async-std-rustls", "macros"] }
async-trait = "0.1.82"
sfo-result = "0.2.4"

[features]
default = ["mysql", "runtime-tokio"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
runtime-async-std = ["sqlx/runtime-async-std", "sqlx/runtime-async-std-rustls"]
runtime-tokio = ["sqlx/runtime-tokio", "sqlx/runtime-tokio-rustls"]

[build-dependencies]
syn = {version = "1.0", features = ["full"]}
